feat(client): RobolectricLaunch, the renderer facts without a daemon (#47)
The first adoption pass found the fifth piece. `DaemonBackend.Android` carries
an `android.jar` because a *daemon's classpath* needs one — but its `jvmArgs()`
and `systemProperties()` never read it, so a caller launching the renderer
directly for a one-shot batch render had to invent a jar to reach facts it
needed.

compose-ai-tools did exactly that: threading a jar through three call sites to
construct a backend changed `AndroidBundleLaunch`'s published constructor, which
compose-preview-server calls across a repository boundary, breaking an
already-compiled consumer ahead of that repository's deprecation cycle
(yschimke/compose-ai-tools#5379). The facts were in the right repository and
behind the wrong door, so that adoption could only take the jar-free half —
the `robolectric.properties` bodies, their packages and the SDK range — and had
to leave the flags and properties duplicated.

`RobolectricLaunch` is the door: `jvmArgs()`, `systemProperties()` and
`config(sdkLevel)` with no backend and no jar. `DaemonBackend.Android` now
delegates to it, which is what keeps a renderer launch and a daemon launch
configuring Robolectric identically — the tests assert equality between the two
rather than re-listing the flags, because a drift between those two sets is
precisely how the font opt-outs went missing on every Android lane (#5371).

Purely additive to the published surface, and the committed golden descriptors
are untouched: the descriptor a daemon launch produces is byte-identical.